# fresco

./: Cargo.toml
src/: lib.rs  main.rs  main_macos.rs
src/autonomous/: mod.rs
src/cas/: store.rs
src/command/: frontend.rs  mod.rs  protocol.rs
src/input/: capture.rs  mod.rs
src/platform/: ivshmem.rs  ivshmem_server.rs  mod.rs  network.rs
src/render/: backend.rs  font.rs  metal_backend.rs  metrics.rs  mod.rs  tessellate.rs  tiny_skia_backend.rs
src/scene/: graph.rs  mod.rs  nodes.rs  sharing.rs  slots.rs
src/window/: mod.rs
