[package]
name = "fresco-server"
version = "0.1.0"
edition = "2021"

[features]
default = []
# Software rasterizer GpuBackend over tiny-skia. Used by FreeBSD-native
# consumers (atrium-compositor); also available on macOS for testing.
tiny-skia-backend = ["dep:tiny-skia"]

[dependencies]
bytemuck = { version = "1", features = ["derive"] }
memmap2 = "0.9"
sha2 = "0.10"
log = "0.4"
env_logger = "0.11"
ttf-parser = "0.25"
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
libc = "0.2"
tiny-skia = { version = "0.11", optional = true }

# macOS host-server build (winit + Metal + AppKit). The traditional
# fresco-server binary lives in src/main.rs and only builds on macOS.
# FreeBSD-native consumers (atrium-compositor) link the lib without
# pulling these in.
[target.'cfg(target_os = "macos")'.dependencies]
metal = "0.29"
objc2 = "0.5"
objc2-foundation = "0.2"
objc2-app-kit = { version = "0.2", features = ["NSView", "NSResponder", "objc2-quartz-core", "NSApplication", "NSRunningApplication", "NSWindow"] }
objc2-quartz-core = { version = "0.2", features = ["CALayer"] }
core-graphics-types = "0.1.3"
winit = { version = "0.30", features = ["rwh_06"] }
raw-window-handle = "0.6"
